--- a/apps.json
+++ b/apps.json
@@ -3,6 +3,17 @@
   "identifier": "com.anastarawneh.source",
   "sourceURL": "https://raw.githubusercontent.com/anastarawneh/altstore-source/master/apps.json",
   "apps": [
-    
+    {
+      "name": "Spotify++",
+      "bundleIdentifier": "com.spotify.client",
+      "developerName": "julioverne",
+      "version": "8.5.2",
+      "versionDate": "2020-03-25T08:00:00-08:00",
+      "downloadURL": "https://bayfiles.com/lfI88ajbod/Spotify_v8.5.7_v1.0_ipa",
+      "localizedDescription": "Spotify++ v8.5.2 by @julioverne",
+      "iconURL": "https://raw.githubusercontent.com/anastarawneh/altstore-source/master/apps/spotify.png",
+      "tintColor": "1DB954",
+      "size": 30444686
+    }
   ]
 }
