--- a/apps.json
+++ b/apps.json
@@ -7,8 +7,10 @@
       "name": "Spotify++",
       "bundleIdentifier": "com.spotify.client",
       "developerName": "julioverne",
+      "subtitle": "Spotify++ v8.5.2 by @julioverne",
       "version": "8.5.2",
       "versionDate": "2020-03-25T08:00:00-08:00",
+      "versionDescription": "Uploaded iPA.",
       "downloadURL": "https://bayfiles.com/lfI88ajbod/Spotify_v8.5.7_v1.0_ipa",
       "localizedDescription": "Spotify++ v8.5.2 by @julioverne",
       "iconURL": "https://raw.githubusercontent.com/anastarawneh/altstore-source/master/apps/spotify.png",
