--- a/apps.json
+++ b/apps.json
@@ -11,7 +11,7 @@
       "version": "8.5.2",
       "versionDate": "2020-03-25T08:00:00-08:00",
       "versionDescription": "Uploaded iPA.",
-      "downloadURL": "https://www10.zippyshare.com/d/tktoV9nZ/9501/Spotify%2b%2b%20v8.5.7_v1.0.ipa",
+      "downloadURL": "https://cdn-08.anonfile.com/1bg892jcob/3e1f7c4b-1585179073/Spotify++%20v8.5.7_v1.0.ipa",
       "localizedDescription": "Spotify++ v8.5.2 by @julioverne",
       "iconURL": "https://raw.githubusercontent.com/anastarawneh/altstore-source/master/apps/spotify.png",
       "tintColor": "1DB954",
